# Iot-Flatform

./: README.md
src/IoT_Client/: CMakeLists.txt  Device.cpp  Device.h  Makefile  Network.cpp  stdafx.h
src/IoT_Client_Sonic/: Device.cpp  Device.h  Makefile  Network.cpp  Network.h  main.cpp
src/IoT_Server/: CMakeLists.txt  Client.cpp  Client.h  Device.cpp  Device.h  LocalDB.cpp  LocalDB.h  Network.cpp  Network.h  ODBC_Manager.cpp  ODBC_Manager.h  Server.cpp  Server.h  User.cpp  User.h  main.cpp  stdafx.h
