CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT("IoT_Client_LED")

SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_VERBOSE_MAKEFILE true)

SET(OUTPUT_ELF "${CMAKE_PROJECT_NAME}.out")
SET(SRC_FILES main.cpp Device.cpp Network.cpp tinyxml2.cpp)

SET(CMAKE_C_COMPILER "g++")

LINK_LIBRARIES(wiringPi)

ADD_EXECUTABLE(${OUTPUT_ELF} ${SRC_FILES})
